Fixed CSS issues on mobile

--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -31,6 +31,12 @@
     text-align: center;
 }
 
+@media screen and (max-width: 1000px) {
+    .title {
+        font-size: 3rem;
+    }
+}
+
 .title-buttons {
     display: flex;
     align-items: center;
